--- a/css/adressbookform.css
+++ b/css/adressbookform.css
@@ -163,3 +163,11 @@
         resize: vertical;
         width: 200px;
       }
+
+      error-output {
+        margin-left: 10px;
+        font-size: 12px;
+        font-style: italic;
+        color: red;
+      }
+      
