--- a/css/adressbookform.css
+++ b/css/adressbookform.css
@@ -170,4 +170,55 @@
         font-style: italic;
         color: red;
       }
+
+      .button-content {
+        display: flex;
+        margin-top: 35px;
+        align-items: center;
+        justify-content: flex-end;
+        margin-right: 10%;
+        margin-bottom: 35px;
+      }
+      
+      .button {
+        font-size: 20px;
+        font-family: Roboto;
+        letter-spacing: 0px;
+        color: #42515f;
+        background: #E2E2E2 0% 0% no-repeat padding-box;
+        border: 1px solid #969696;
+        border-radius: 5px;
+        opacity: 1;
+        font-weight: 400;
+        min-width: 140px;
+        padding: 7px 7px;
+        cursor: pointer;
+      }
+      
+      .submitButton {
+        margin-right: 30px;
+      }
+      
+      .submitButton:hover {
+        background: #39ac1ad7;
+        color: #faf9f9e3;
+        font-weight: 300;
+        border: 2px solid #2bd625;
+      }
+      
+      .resetButton:hover {
+        background: #0000008e;
+        color: #faf9f9e3;
+        font-weight: 300;
+        border: 2px solid #e4e4e4;
+      }
+      
+      button[disabled]{
+        border: 1px solid #999999;
+        background-color: #cccccc;
+        color: #666666;
+        cursor: none;
+        pointer-events:none;
+      }
+      
       
